--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-02  Hendrik Richter <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation
+
 2004-09-02  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italiant translation by
