--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-03  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-metafile.c (remove_file_metadata):
+	Destroy the changes hash table in the right way (#48299)
+
 2004-08-30  Alexander Larsson  <alexl@redhat.com>
 
 	* NEWS:
