Translation updated by Reinout van Schouwen.
2004-09-03  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Reinout van Schouwen.

--- a/po/nl.po
+++ b/po/nl.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 16:44+0200\n"
-"PO-Revision-Date: 2004-08-05 18:36+0100\n"
+"POT-Creation-Date: 2004-09-03 12:16+0200\n"
+"PO-Revision-Date: 2004-09-03 15:36+0100\n"
 "Last-Translator: Reinout van Schouwen <reinout@cs.vu.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
@@ -1192,9 +1192,8 @@ msgid "Default zoom level used by the list view."
 msgstr "Standaard zoomfactor van lijstweergave"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:24
-#, fuzzy
 msgid "Desktop computer icon name"
-msgstr "Naam van persoonlijke map-pictogram op werkblad"
+msgstr "Naam van computerpictogram op werkblad"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:25
 msgid "Desktop font"
@@ -1640,13 +1639,12 @@ msgid "The side pane view to show in newly opened windows."
 msgstr "De zijpaneelweergave om in nieuw geopende vensters te tonen."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
-#, fuzzy
 msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
 msgstr ""
 "Deze naam kan ingesteld worden indien u een aangepaste naam wilt voor het "
-"persoonlijke map-pictogram op het werkblad."
+"computerpictogram op het werkblad."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid ""
@@ -3458,9 +3456,8 @@ msgid "Browse the filesystem with the file manager"
 msgstr "Bestandssysteem doorbladeren met het bestandsbeheer"
 
 #: nautilus.desktop.in.h:2
-#, fuzzy
 msgid "File Browser"
-msgstr "Bestandsbeheer: %s"
+msgstr "Bestandsbeheer"
 
 #: nautilus-file-management-properties.desktop.in.h:1
 msgid "Change how files are managed"
@@ -4708,9 +4705,8 @@ msgid "No templates Installed"
 msgstr "Geen sjablonen geïnstalleerd"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:28
-#, fuzzy
 msgid "Open Wit_h"
-msgstr "Openen met"
+msgstr "Openen _met"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:29
 msgid "Open each selected item in a navigation window"
@@ -4725,9 +4721,8 @@ msgid "Open the selected item in this window"
 msgstr "Geselecteerd item in dit venster openen"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:32
-#, fuzzy
 msgid "Open with Other _Application..."
-msgstr "Met andere toepassing openen"
+msgstr "Met _andere toepassing openen..."
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:33
 msgid "Prepare the selected files to be copied with a Paste Files command"
@@ -5145,88 +5140,76 @@ msgid "%s on %s"
 msgstr "%s op %s"
 
 #: src/nautilus-connect-server-dialog.c:380
-#, fuzzy
 msgid "_Location (URI):"
-msgstr "_Lokatie (URL):"
+msgstr "_Lokatie (URI):"
 
 #: src/nautilus-connect-server-dialog.c:424
-#, fuzzy
 msgid "_Server:"
-msgstr "_Nooit"
+msgstr "_Server:"
 
 #: src/nautilus-connect-server-dialog.c:443
-#, fuzzy
 msgid "Optional information:"
-msgstr "Informatie"
+msgstr "Optionele informatie:"
 
 #: src/nautilus-connect-server-dialog.c:455
-#, fuzzy
 msgid "_Share:"
-msgstr "Leisteen"
+msgstr "_Gedeelde map:"
 
 #: src/nautilus-connect-server-dialog.c:476
-#, fuzzy
 msgid "_Port:"
-msgstr "_Formaat:"
+msgstr "_Poort:"
 
 #: src/nautilus-connect-server-dialog.c:496
-#, fuzzy
 msgid "_Folder:"
-msgstr "_Nieuwe map"
+msgstr "_Map:"
 
 #: src/nautilus-connect-server-dialog.c:516
-#, fuzzy
 msgid "_User Name:"
-msgstr "_Naam:"
+msgstr "Gebruikers_naam:"
 
 #: src/nautilus-connect-server-dialog.c:539
 msgid "_Name to use for connection:"
-msgstr ""
+msgstr "_Naam voor de verbinding:"
 
 #: src/nautilus-connect-server-dialog.c:597
 msgid "Connect to Server"
 msgstr "Verbinden met server"
 
-# In wat??
 #: src/nautilus-connect-server-dialog.c:614
-#, fuzzy
 msgid "Service _type:"
-msgstr "Diensten in"
+msgstr "Dienst_type:"
 
 #: src/nautilus-connect-server-dialog.c:623
 msgid "SSH"
-msgstr ""
+msgstr "SSH"
 
 #: src/nautilus-connect-server-dialog.c:625
 msgid "Public FTP"
-msgstr ""
+msgstr "Publieke FTP"
 
 #: src/nautilus-connect-server-dialog.c:627
 msgid "FTP (with login)"
-msgstr ""
+msgstr "FTP (met aanmelden)"
 
 #: src/nautilus-connect-server-dialog.c:629
-#, fuzzy
 msgid "Windows share"
-msgstr "Windows gedeeld volumen"
+msgstr "Windows gedeelde map"
 
 #: src/nautilus-connect-server-dialog.c:631
 msgid "WebDAV (HTTP)"
-msgstr ""
+msgstr "WebDAV (HTTP)"
 
 #: src/nautilus-connect-server-dialog.c:633
 msgid "Secure WebDAV (HTTPS)"
-msgstr ""
+msgstr "Beveiligde WebDAV (HTTPS)"
 
 #: src/nautilus-connect-server-dialog.c:635
-#, fuzzy
 msgid "Custom Location"
-msgstr "Lokatie:"
+msgstr "Aangepaste lokatie"
 
 #: src/nautilus-connect-server-dialog.c:685
-#, fuzzy
 msgid "Browse _Network"
-msgstr "Windows-netwerk"
+msgstr "_Netwerk doorbladeren"
 
 #: src/nautilus-connect-server-dialog.c:691
 msgid "C_onnect"
