Updated Czech translation.
2004-09-04  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

--- a/po/cs.po
+++ b/po/cs.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 16:44+0200\n"
-"PO-Revision-Date: 2004-08-18 16:02+0200\n"
+"POT-Creation-Date: 2004-09-03 12:16+0200\n"
+"PO-Revision-Date: 2004-09-03 17:37+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -5737,7 +5737,7 @@ msgstr "_Zpět"
 
 #: src/nautilus-navigation-window-ui.xml.h:29
 msgid "_Bookmarks"
-msgstr "_Záložky"
+msgstr "Zá_ložky"
 
 #: src/nautilus-navigation-window-ui.xml.h:30
 msgid "_Clear History"
@@ -6220,7 +6220,7 @@ msgstr "_Obsah"
 
 #: src/nautilus-shell-ui.xml.h:34
 msgid "_Edit"
-msgstr "_Úpravy"
+msgstr "_Upravit"
 
 #: src/nautilus-shell-ui.xml.h:35
 msgid "_File"
