--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-04  Baris Cicek <baris@teamforce.name.tr>
+
+	* tr.po: Updated Turkish Translation
+	
 2004-09-04  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
