--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-04  Mətin Əmirov  <metin@karegen.com>
+
+	* az.po: Translation updated.
+
 2004-09-04  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation
