--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-06  David Lodge <dave@cirt.net>
+                                                                                
+        * en_GB.po: Updated British translation.
+                                                                                
 2004-09-06  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
