--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-07  Nikos Charonitakis  <charosn@her.forthnet.gr>
+
+	* el.po: Updated Greek translation.
+
 2004-09-07  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
